--- a/CursoJS/Aula04/ex001.html
+++ b/CursoJS/Aula04/ex001.html
@@ -20,9 +20,14 @@
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem.')
+        // Comentário:
+        window.alert('Minha primeira mensagem.') 
         window.confirm('Esta gostando de JS?')
         window.prompt('Qual é o seu nome?')
+        /* 
+        Comentários com varias
+        linhas para anotar...
+        */
     </script>
 </body>
 </html>
